<resources>
    <string name="app_name">Movies App</string>

    <!-- Main Activity -->
    <string name="sort_by_popularity">Sort by Popularity</string>
    <string name="sort_by_rating">Sort by Rating</string>
    <string name="error_message">An Error occured</string>

    <!-- Movie Details Activity -->
    <string name="MovieDetailsTitle">Movie Details</string>
    <string name="OriginalTitle">Original Title</string>
    <string name="Rating">Rating</string>
    <string name="Popularity">Popularity</string>
    <string name="Overview">Overview</string>
    <string name="ReleaseDate">Release Date</string>
    <string name="Trailers">Trailers</string>
    <string name="Reviews">Reviews</string>
    <string name="Favorite">Favorite</string>
    <string name="ShowFavorites">Show Favorites</string>
    <string name="Review_Author">Author:</string>
</resources>
