<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_originalTitle_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:padding="4dp"
                android:text="@string/OriginalTitle"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/textview_originalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:paddingBottom="8dp"/>

            <ImageView
                android:id="@+id/imageview_details_movie_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"/>

            <TextView
                android:id="@+id/textview_rating_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:padding="4dp"
                android:text="@string/Rating"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/textview_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:paddingTop="4dp"
                android:paddingBottom="8dp"
                android:paddingLeft="4dp"/>

            <TextView
                android:id="@+id/textview_popularity_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:padding="4dp"
                android:text="@string/Popularity"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/textview_popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:paddingTop="4dp"
                android:paddingBottom="8dp"
                android:paddingLeft="4dp"/>

            <TextView
                android:id="@+id/textview_overview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:padding="4dp"
                android:text="@string/Overview"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/textview_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:paddingTop="4dp"
                android:paddingBottom="8dp"
                android:paddingLeft="4dp"/>

            <TextView
                android:id="@+id/textview_releasedate_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:padding="4dp"
                android:text="@string/ReleaseDate"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/textview_releasedate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:paddingTop="4dp"
                android:paddingLeft="4dp"
                android:paddingBottom="8dp"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Reviews"
            android:onClick="onReviewsClick"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_trailers_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:padding="4dp"
            android:text="@string/Trailers"
            android:textStyle="normal|bold" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listview_videos"/>

    </LinearLayout>

</LinearLayout>
